--- a/_recursos/01-pueblos-originarios-grilla.html
+++ b/_recursos/01-pueblos-originarios-grilla.html
@@ -4,6 +4,7 @@ title: Pueblos originarios grilla
 permalink: /argentina-manuscrita-pueblos-originarios-grilla/
 type: extras
 description: Mapa y lista de pueblos originarios mencionados en el texto
+published: false
 ---
 
 <p>En este mapa se pueden visualizar algunos de los pueblos originarios mencionados en La Argentina Manuscrita de Ruy Díaz de Guzmán. Haga click sobre los marcadores para ver el nombre y una breve descripción de cada pueblo.</p>
