add native people

--- a/_recursos/01-pueblos-originarios-lista.html
+++ b/_recursos/01-pueblos-originarios-lista.html
@@ -66,7 +66,7 @@ published: false
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0009/?q=Charruas">Charrúas</a>: los charrúas constituían una sociedad de cazadores-recoletores que habitaban en los actuales territorios de Uruguay. Tribu feroz e indómita, en continua guerra con los Arachanes. Fueron perseguidos y exterminados por el General don Fructuoso Rivera en 1831. Pedro de Ángelis propone la siguiente etimología para &quot;charrúa&quot;: &quot;en guaraní, quiere decir, &quot;somos turbulentos y revoltosos&quot; (_Cha_, nosotros, y _rru_, enojadizo)&quot;.</p>
 
-<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0026/?q=Chayos">Chayos</a>: Refiere a los  yaros, yaroes, yaroses o jaros, pueblo indígena de América del Sur que antes de su fusión dentro del complejo charrúa entre fines del siglo XVII y principios del siglo XVIII habitaba en ambas márgenes del bajo río Uruguay en Argentina y Uruguay.</p>
+<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0026/?q=Chayos">Chayos</a>: Refiere a los yaros, yaroes, yaroses o jaros, pueblo indígena de América del Sur que antes de su fusión dentro del complejo charrúa entre fines del siglo XVII y principios del siglo XVIII habitaba en ambas márgenes del bajo río Uruguay en Argentina y Uruguay.</p>
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0012/?q=Chiquis">Chiquis</a>: Indígenas del Guayra. Tribu poco conocida, en las márgenes del Iguazú.</p>
 
@@ -98,11 +98,11 @@ published: false
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0019/?q=Maneses">Maneses</a>: Parcialidad de los Xarajes-Guató. Habitan del lado de Santa Cruz.</p>
 
+<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0017/?q=Mogolas">Mogolas</a>: indios del Paraguay reducidos por Cabeza de Vaca. Esta tribu ha dejado de existir y se habla muy poco de ella en la historia de la conquista. Su nombre no es guaraní, se ignora su significado.</p>
+
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0067/?q=Nagases">Nagases</a>: Acompañan a Cabeza de Vaca en una de sus expediciones. Estos indios no eran guaranís, según lo indica el texto, y por consiguiente ignoramos lo que pueda significar este nombre.</p>
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0018/?q=Napabes">Napabes</a>: Podría tratarse de una parcialidad guaycurú, naparús.</p>
-
-<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0017/?q=Mogolas">Mogolas</a>: indios del Paraguay reducidos por Cabeza de Vaca. Esta tribu ha dejado de existir y se habla muy poco de ella en la historia de la conquista. Su nombre no es guaraní, se ignora su significado.</p>
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0067/?q=Orejones">Orejones</a>: Parcialidad de los huitoto, etnia de la Amazonía colombiana y peruana, cuyo territorio originario se encontraba en la parte media del río Caquetá y sus afluentes, y la zona selvática que va hasta el río Putumayo. Hablan una lengua de la familia bora-witoto, habitaban cerca de un paraje llamado Puerto de los Reyes.</p>
 
@@ -116,7 +116,7 @@ published: false
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0014/?q=Querandís">Querandís</a>: Refiere a querandíes, sociedad nativa que los exploradores y colonos españoles hallaron en las tierras del Río de la Plata, pero que circulaban por vastos espacios interiores, desde las pampas al norte de la Patagonia, sierras centrales y la Mesopotamia argentina. Se mantenían aprovechando los recursos faunísticos, vegetales y líticos de estos territorios, utilizando modelos de explotación del medio muy flexibles.</p>
 
-<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0064/?q=Taberé">Taberé</a>: Este pueblo habitaba las faldas de la cordillera de Amambay, en la provincia de Ipané. Opusieron gran resistencia a los invasores españoles: se negaron a entregar al hijo de Alejo García, mataron a los mensajeros de Cabeza de Vaca y se atrincheraron en un fuerte de madera; salieron 4 atacar a los españoles. Su nombre se compone de tabe, pueblo, y ré, después; cuyo sentido es: &quot;gente que vive retirada de los pueblos&quot;.</p>
+<p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0064/?q=Taberé">Taberé</a>: Este pueblo habitaba las faldas de la cordillera de Amambay, en la provincia de Ipané. Opusieron gran resistencia a los invasores españoles: se negaron a entregar al hijo de Alejo García, mataron a los mensajeros de Cabeza de Vaca, se atrincheraron en un fuerte de madera y salieron cuatro a atacar a los españoles. Su nombre se compone de tabe, pueblo, y ré, después; cuyo sentido es: &quot;gente que vive retirada de los pueblos&quot;.</p>
 
 <p><a href="{{ site.baseurl }}/argentina_manuscrita_pages/pg_0005/?q=Tamoios">Tamoios</a>: Por tamoios o tamoyos se conocen a los indígenas que habitaban las costas de los actuales estados brasileños de San Pablo y Río de Janeiro. Pueden identificarse también con los tupí-nambá.</p>
 
