--- a/_recursos/03-search.html
+++ b/_recursos/03-search.html
@@ -8,7 +8,7 @@ description: Herramienta de búsqueda textual
 <form id="site_search">
 <p class="h3 lh-condensed">Hacer una búsqueda en La Argentina Manuscrita:</p>
 <br>
-<input id="search" type="text" name="q"></form>
+<input id="search" type="text" name="q" autofocus></form>
 
 <div id="results"></div>
 <ul id="search_results"></ul>
