--- a/_argentina_manuscrita_pages/pg_0109.html
+++ b/_argentina_manuscrita_pages/pg_0109.html
@@ -17,10 +17,10 @@ img: pg_0109
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#hgis9000006").miniPreview();
+  $(function() {  $("#geonames3469034").miniPreview();
   $("#hgis9000056").miniPreview();
-  $("#geonames3469034").miniPreview();
   $("#geonames3437598").miniPreview();
+  $("#hgis9000006").miniPreview();
   $("#hgis9000486").miniPreview();
   });
 </script>
