--- a/_argentina_manuscrita_pages/pg_0149.html
+++ b/_argentina_manuscrita_pages/pg_0149.html
@@ -17,9 +17,9 @@ img: pg_0149
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#hgis9000006").miniPreview();
+  $(function() {  $("#geonames3437598").miniPreview();
+  $("#hgis9000006").miniPreview();
   $("#hgis8000009").miniPreview();
-  $("#geonames3437598").miniPreview();
   $("#geonames3841956").miniPreview();
   });
 </script>
