--- a/_argentina_manuscrita_pages/pg_0101.html
+++ b/_argentina_manuscrita_pages/pg_0101.html
@@ -17,8 +17,8 @@ img: pg_0101
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#hgis9000056").miniPreview();
-  $("#geonames3469034").miniPreview();
+  $(function() {  $("#geonames3469034").miniPreview();
+  $("#hgis9000056").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
