--- a/_argentina_manuscrita_pages/pg_0108.html
+++ b/_argentina_manuscrita_pages/pg_0108.html
@@ -17,10 +17,10 @@ img: pg_0108
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#geonames3932488").miniPreview();
-  $("#hgis9000006").miniPreview();
-  $("#hgis9001006").miniPreview();
+  $(function() {  $("#hgis9001006").miniPreview();
   $("#hgis9000004").miniPreview();
+  $("#hgis9000006").miniPreview();
+  $("#geonames3932488").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
