--- a/_argentina_manuscrita_pages/pg_0116.html
+++ b/_argentina_manuscrita_pages/pg_0116.html
@@ -17,11 +17,11 @@ img: pg_0116
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#geonames3461995").miniPreview();
-  $("#geonames3455061").miniPreview();
-  $("#hgis9001006").miniPreview();
-  $("#geonames3469034").miniPreview();
+  $(function() {  $("#hgis9001006").miniPreview();
   $("#geonames3841956").miniPreview();
+  $("#geonames3455061").miniPreview();
+  $("#geonames3469034").miniPreview();
+  $("#geonames3461995").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
