--- a/_argentina_manuscrita_pages/pg_0117.html
+++ b/_argentina_manuscrita_pages/pg_0117.html
@@ -17,13 +17,13 @@ img: pg_0117
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#geonames3461995").miniPreview();
-  $("#geonames3437598").miniPreview();
-  $("#geonames3932488").miniPreview();
-  $("#geonames3841956").miniPreview();
+  $(function() {  $("#hgis9001002").miniPreview();
   $("#hgis9000006").miniPreview();
   $("#geonames3469034").miniPreview();
-  $("#hgis9001002").miniPreview();
+  $("#geonames3841956").miniPreview();
+  $("#geonames3932488").miniPreview();
+  $("#geonames3461995").miniPreview();
+  $("#geonames3437598").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
