--- a/_argentina_manuscrita_pages/pg_0122.html
+++ b/_argentina_manuscrita_pages/pg_0122.html
@@ -17,9 +17,9 @@ img: pg_0122
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#hgis9000006").miniPreview();
+  $(function() {  $("#geonames3439441").miniPreview();
   $("#geonames3437598").miniPreview();
-  $("#geonames3439441").miniPreview();
+  $("#hgis9000006").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
