--- a/_argentina_manuscrita_pages/pg_0126.html
+++ b/_argentina_manuscrita_pages/pg_0126.html
@@ -17,11 +17,11 @@ img: pg_0126
 <a href="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"><img src="{{site.baseurl}}/assets/img/argentina_manuscrita/{{page.img}}.jpg"></a>
 </div>
 </div><script type="text/javascript">
-  $(function() {  $("#geonames3932488").miniPreview();
+  $(function() {  $("#hgis9001006").miniPreview();
   $("#hgis8000013").miniPreview();
-  $("#hgis8000009").miniPreview();
-  $("#hgis9001006").miniPreview();
   $("#hgis8000276").miniPreview();
+  $("#hgis8000009").miniPreview();
+  $("#geonames3932488").miniPreview();
   });
 </script>
 <script src="{{ site.baseurl }}/assets/js/ruydiazPlaces.js" type="text/javascript"></script>
