add link to voyant

--- a/_recursos/01-pueblos-originarios.html
+++ b/_recursos/01-pueblos-originarios.html
@@ -4,6 +4,7 @@ title: Pueblos originarios
 permalink: /argentina-manuscrita-pueblos-originarios/
 type: extras
 description: Mapa y lista de pueblos originarios mencionados en el texto
+icon: map
 ---
 
 <h2>Localización</h2>
