--- a/_recursos/02-nombres.html
+++ b/_recursos/02-nombres.html
@@ -4,6 +4,7 @@ title: Nombres destacados
 permalink: /argentina-manuscrita-nombres/
 type: extras
 description: Más información sobre los personajes destacados del texto
+icon: people
 ---
 
 <p>Haga click en los personajes para ver más información biográfica, histórica y/o literaria.</p>
