--- a/_recursos/03-search.html
+++ b/_recursos/03-search.html
@@ -2,12 +2,12 @@
 layout: page
 title: Búsqueda
 order: 10
-description: Herramienta de búsqueda textual
+description: Buscar en el texto
 icon: search
 ---
 
 <form id="site_search">
-<p class="h3 lh-condensed">Hacer una búsqueda en La Argentina Manuscrita:</p>
+<p class="h3 lh-condensed">Hacer una búsqueda en <i>La Argentina Manuscrita</i>:</p>
 <br>
 <input id="search" type="text" name="q" autofocus></form>
 
