--- a/_recursos/01-pueblos-originarios.html
+++ b/_recursos/01-pueblos-originarios.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Pueblos originarios
-permalink: /argentina-manuscrita-pueblos-originarios/
+permalink: /pueblos-originarios/
 type: extras
 description: Mapa y lista de pueblos originarios mencionados en <i>La Argentina Manuscrita</i>
 icon: map
