--- a/_recursos/04-descargas.html
+++ b/_recursos/04-descargas.html
@@ -1,6 +1,7 @@
 ---
 layout: page
 title: Descargas
+permalink: /descargas/
 description: Texto integral disponible en diversos formatos
 icon: download
 ---
