--- a/_recursos/02-nombres.html
+++ b/_recursos/02-nombres.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Nombres destacados
-permalink: /argentina-manuscrita-nombres/
+permalink: /nombres-destacados/
 type: extras
 description: Más información sobre los personajes destacados del texto
 icon: people
