--- a/_recursos/01-pueblos-originarios.html
+++ b/_recursos/01-pueblos-originarios.html
@@ -18,13 +18,15 @@ icon: map
 <div id="map" class="map leaflet-container mb-3" style="height: 500px; position:relative;"></div>
 
 <script>
-  // create the map object and set the cooridnates of the initial view:
   var map = L.map('map').setView([-23.5811123, -58.4287612], 4);
 
-  // create the tile layer with correct attribution:
-  L.tileLayer('http://{s}.tiles.mapbox.com/v3/jamesg87.goac2bf1/{z}/{x}/{y}.png', {
-      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
-      maxZoom: 18
+  L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token={accessToken}', {
+      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a>, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://mapbox.com">Mapbox</a>',
+      maxZoom: 18,
+      tileSize: 512,
+      zoomOffset: -1,
+      id: 'mapbox/streets-v11',
+      accessToken: 'pk.eyJ1IjoiaGRjYWljeXQiLCJhIjoiY2s5MDc0NGQ3MjBudTNtbWh1NzFmM2VjZyJ9.MuGwJ2d1CmhzIg4M-TQJWA'
   }).addTo(map);
 
   var marker = L.marker([-30.99, -51.49]).addTo(map);
